# ferny

./: .flake8  .gitignore  .gitleaks.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml  tox.yaml
doc/: interaction-protocol.md
examples/: protocol.py  simple.py
src/: ferny.py
src/ferny/: __init__.py  askpass.py  errors.py  interaction_agent.py  interaction_client.py  session.py  ssh_askpass.py  ssh_errors.py  transport.py
test/: id_rsa  id_rsa.enc  id_rsa.pub  run  test_agent.py  test_basic.py  test_client.py  test_regexp.py  test_transport.py
test/keys/: hostkey_ed25519  hostkey_ed25519.pub  hostkey_rsa  hostkey_rsa.pub  id_ed25519  id_ed25519.pub  id_ed25519_passphrase  id_ed25519_passphrase.pub  id_rsa  id_rsa.pub  wrong_hostkey  wrong_hostkey.pub
test/users/: admin.authorized_keys
